<!--
  ~ Resistor Assistant - Resistance Calculator
  ~ Copyright (C) 2018 Alexander Köster (Woalk Software)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="assistant"
        android:title="@string/pref_category_assistant">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="assistant_tts"
            android:summary="@string/pref_assistant_tts_message"
            android:title="@string/pref_assistant_tts_title"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="info"
        android:title="@string/pref_category_info">

        <Preference
            android:key="info_version"
            android:title="@string/pref_info_version_title"/>

        <Preference
            android:key="info_authors"
            android:summary="@string/pref_info_authors_message"
            android:title="@string/pref_info_authors_title"/>

        <Preference
            android:key="info_license"
            android:summary="@string/pref_info_license_message"
            android:title="@string/pref_info_license_title"/>

        <Preference
            android:key="info_repo"
            android:summary="@string/pref_info_repo_message"
            android:title="@string/pref_info_repo_title"/>

        <Preference
            android:key="info_build_date"
            android:title="@string/pref_info_build_date_title"/>

        <Preference
            android:key="info_commit"
            android:title="@string/pref_info_commit_title"/>
    </PreferenceCategory>

</PreferenceScreen>
