<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Resistor Assistant - Resistance Calculator
  ~ Copyright (C) 2018 Alexander Köster (Woalk Software)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_assistant"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/title_assistant" />

    <item
        android:id="@+id/navigation_colors"
        android:icon="@drawable/ic_colors_black_24dp"
        android:title="@string/title_colors" />

    <item
        android:id="@+id/navigation_number"
        android:icon="@drawable/ic_omega_black_24dp"
        android:title="@string/title_number" />

</menu>
