<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Resistor Assistant - Resistance Calculator
  ~ Copyright (C) 2018 Alexander Köster (Woalk Software)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/assistantBackground"
        app:layout_constraintBottom_toTopOf="@+id/layout_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:windowBackground"
        android:elevation="@dimen/top_ribbon_elevation"
        android:orientation="horizontal"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/message_input_hint"
            android:imeOptions="actionSend"
            android:inputType="textShortMessage" />

        <TextView
            android:id="@+id/label_voice_listening"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/voice_recognition_listening"
            android:textAppearance="?android:textAppearanceMedium" />

        <ImageButton
            android:id="@+id/button_voice"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_voice"
            android:src="@drawable/ic_keyboard_voice_black_24dp"
            android:tint="?colorAccent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
