<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Resistor Assistant - Resistance Calculator
  ~ Copyright (C) 2018 Alexander Köster (Woalk Software)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ColorsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/layout_resistor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_resistor_dent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="@dimen/resistor_dent_margin"
                android:layout_height="@dimen/resistor_height"
                android:layout_weight="0"
                android:background="@drawable/bg_resistor_bump" />

            <Button
                android:id="@+id/button_color1"
                android:layout_width="0dp"
                android:layout_height="@dimen/resistor_dent_height"
                android:layout_weight="4"
                android:background="@color/resistorColor"
                android:elevation="@dimen/resistor_button_elevation"
                android:foreground="?selectableItemBackground" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/button_color2"
                android:layout_width="0dp"
                android:layout_height="@dimen/resistor_dent_height"
                android:layout_weight="4"
                android:background="@color/resistorColor"
                android:elevation="@dimen/resistor_button_elevation"
                android:foreground="?selectableItemBackground" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/button_color3"
                android:layout_width="0dp"
                android:layout_height="@dimen/resistor_dent_height"
                android:layout_weight="4"
                android:background="@color/resistorColor"
                android:elevation="@dimen/resistor_button_elevation"
                android:foreground="?selectableItemBackground" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/button_color4"
                android:layout_width="0dp"
                android:layout_height="@dimen/resistor_dent_height"
                android:layout_weight="4"
                android:background="@color/resistorColor"
                android:elevation="@dimen/resistor_button_elevation"
                android:foreground="?selectableItemBackground" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

            <Button
                android:id="@+id/button_color5"
                android:layout_width="0dp"
                android:layout_height="@dimen/resistor_dent_height"
                android:layout_weight="4"
                android:background="@color/resistorColor"
                android:elevation="@dimen/resistor_button_elevation"
                android:foreground="?selectableItemBackground" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/button_color6"
                android:layout_width="0dp"
                android:layout_height="@dimen/resistor_dent_height"
                android:layout_weight="4"
                android:background="@color/resistorColor"
                android:elevation="@dimen/resistor_button_elevation"
                android:foreground="?selectableItemBackground" />

            <View
                android:layout_width="@dimen/resistor_dent_margin"
                android:layout_height="@dimen/resistor_height"
                android:layout_weight="0"
                android:background="@drawable/bg_resistor_bump" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center_horizontal"
            android:text="@string/resistance_none"
            android:textAppearance="@style/AppTheme.TextAppearance.ResultHuge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_resistor" />

        <TextView
            android:id="@+id/tolerance_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center_horizontal"
            android:text="@string/resistance_tolerance_none"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <TextView
            android:id="@+id/norm_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center_horizontal"
            android:text="@string/resistance_norm_none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tolerance_result" />

        <TextView
            android:id="@+id/info_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center_horizontal"
            android:text="@string/resistance_info_none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/norm_result" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>